plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/unaryExpressionType.xpath2
-<error descr="Expected type 'xs:numeric', got 'xs:string'">'55'</error>